# bread

./: .cz.toml  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: cmake-multi-platform.yml  default.yml  nightly.yml  release.yml  static.yml
docs/: CHANGELOG.md  conf.py  index.md  requirements.txt  update_docs.sh
include/: cache_server.h  command.h  expected_compat.h
include/bread/: cache_client.h  cache_server.h  command.h  expected_compat.h  storage.h  storage_engine.h  storage_expiration.h
include/bread/commands/: add_command.h  append_command.h  bad_command.h  command_factory.h  delete_command.h  get_command.h  prepend_command.h  quit_command.h  replace_command.h  set_command.h  unknown_command.h
include/client/: client.h
src/: cache_server.cpp  command.cpp  handler.cpp  handler.h  main.cpp
src/bread/: cache_client.cpp  cache_server.cpp  command.cpp  handler.cpp  handler.h  storage.cpp  storage_expiration.cpp
src/bread/commands/: add_command.cpp  append_command.cpp  bad_command.cpp  command_factory.cpp  delete_command.cpp  get_command.cpp  prepend_command.cpp  quit_command.cpp  replace_command.cpp  set_command.cpp  unknown_command.cpp
src/client/: client.cpp  main.cpp
src/server/: main.cpp
tests/: CMakeLists.txt  test_cache_server.cpp  test_client.cpp  test_command.cpp  test_storage_expiration.cpp
